adding in tracking of stats for cd