@@ -1,54 +1,38 @@
 package com.ender.communitydayspawner.tracking;
 
-import com.cobblemon.mod.common.api.events.pokemon.PokemonCaughtCallback;
-import com.cobblemon.mod.common.pokemon.Pokemon;
-import net.minecraft.server.network.ServerPlayerEntity;
+import com.ender.communitydayspawner.TimedSpawnManager;
 
-import java.util.HashMap;
-import java.util.Map;
-import java.util.UUID;
+import java.util.*;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.stream.Collectors;
 
 public class CatchTracker {
 
-    // Global counts
     private static final Map<String, Integer> globalCaughtCounts = new HashMap<>();
     private static final Map<String, Integer> globalShinyCounts = new HashMap<>();
 
-    // Per-player counts
     private static final Map<UUID, Map<String, Integer>> playerCaughtCounts = new HashMap<>();
     private static final Map<UUID, Map<String, Integer>> playerShinyCounts = new HashMap<>();
 
-    public static void init() {
-        PokemonCaughtCallback.EVENT.register((player, pokemon, method) -> {
-            String species = pokemon.getSpecies().getName();
-            UUID playerId = player.getUuid();
+    public static void recordCapture(UUID playerId, String species, boolean isShiny) {
+        if (!TimedSpawnManager.isCommunityDaySpecies(species)) return;
 
-            if (TimedSpawnManager.isCommunityDaySpecies(species)) {
-                // Global counters
-                globalCaughtCounts.merge(species, 1, Integer::sum);
-                if (pokemon.isShiny()) {
-                    globalShinyCounts.merge(species, 1, Integer::sum);
-                }
+        globalCaughtCounts.merge(species, 1, Integer::sum);
+        if (isShiny) {
+            globalShinyCounts.merge(species, 1, Integer::sum);
+        }
 
-                // Per-player counters
-                playerCaughtCounts.computeIfAbsent(playerId, k -> new HashMap<>())
-                        .merge(species, 1, Integer::sum);
+        playerCaughtCounts
+                .computeIfAbsent(playerId, k -> new ConcurrentHashMap<>())
+                .merge(species, 1, Integer::sum);
 
-                if (pokemon.isShiny()) {
-                    playerShinyCounts.computeIfAbsent(playerId, k -> new HashMap<>())
-                            .merge(species, 1, Integer::sum);
-                }
-
-                // Debug output
-                System.out.println("🎉 " + player.getName().getString() + " caught " +
-                        (pokemon.isShiny() ? "a shiny " : "a ") + species + "!");
-            }
-
-            return null; // Don't override vanilla behavior
-        });
+        if (isShiny) {
+            playerShinyCounts
+                    .computeIfAbsent(playerId, k -> new ConcurrentHashMap<>())
+                    .merge(species, 1, Integer::sum);
+        }
     }
 
-    // Global accessors
     public static int getGlobalCaughtCount(String species) {
         return globalCaughtCounts.getOrDefault(species, 0);
     }
@@ -57,7 +41,6 @@ public class CatchTracker {
         return globalShinyCounts.getOrDefault(species, 0);
     }
 
-    // Per-player accessors
     public static int getPlayerCaughtCount(UUID playerId, String species) {
         return playerCaughtCounts.getOrDefault(playerId, new HashMap<>())
                 .getOrDefault(species, 0);
@@ -78,16 +61,16 @@ public class CatchTracker {
     public static List<Map.Entry<UUID, Integer>> getTopCatchers(String species, int topN) {
         return playerCaughtCounts.entrySet().stream()
                 .map(e -> Map.entry(e.getKey(), e.getValue().getOrDefault(species, 0)))
-                .sorted((a, b) -> b.getValue() - a.getValue())
+                .sorted((a, b) -> Integer.compare(b.getValue(), a.getValue()))
                 .limit(topN)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public static List<Map.Entry<UUID, Integer>> getTopShinyCatchers(String species, int topN) {
         return playerShinyCounts.entrySet().stream()
                 .map(e -> Map.entry(e.getKey(), e.getValue().getOrDefault(species, 0)))
-                .sorted((a, b) -> b.getValue() - a.getValue())
+                .sorted((a, b) -> Integer.compare(b.getValue(), a.getValue()))
                 .limit(topN)
-                .toList();
+                .collect(Collectors.toList());
     }
 }
